styles.css
body{
    margin: 0;
    padding: 0;
}

header{
    background-color: #1F2937;
}

.header-container{
    display: flex;
    flex-direction:row;
    flex: 1 1 auto;
    width: auto;
    gap: 30px;
}
.image-container{
    flex-grow: 0.8;
}

.nav{
    font-size: 18px;
    color: #E5E7EB;
}
.boxes {
    display:flex;
    flex-direction: column;
    flex: 1 1 auto;
    height: 100vh;
}

.box{
    flex: 1;
    margin: 0px;
    border: 0px;
    padding: 0px;
}


.box.top{
    background-color: #1F2937;
    flex-grow: 0.8;
}
.box.second{
    background-color: #ffff;
    
}

.box.third{
    background-color: #E5E7EB;
    
}

.box.fourth{
    background-color: #ffff;
    
}

footer{
    background-color: #1F2937;
    
}

#logo-image{
    padding-left: 5%;
    padding-right: 0;
    margin-right: 0;
}

